# Multi-Agent-Custom-Automation-Engine-Solution-Accelerator

src/backend/: pyproject.toml  requirements.txt
src/mcp_server/: pyproject.toml
