[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-evaluation==1.11.0",
    "azure-ai-inference==1.0.0b9",
    "azure-ai-projects==2.0.0",
    "azure-cosmos==4.9.0",
    "azure-identity==1.24.0",
    "azure-monitor-events-extension==0.1.0",
    "azure-monitor-opentelemetry==1.8.5",
    "azure-search-documents==11.5.3",
    "fastapi==0.135.2",
    "openai==2.16.0",
    "opentelemetry-api==1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.0",
    "opentelemetry-exporter-otlp-proto-http==1.39.0",
    "opentelemetry-instrumentation-fastapi==0.60b0",
    "opentelemetry-instrumentation-openai==0.46.2",
    "opentelemetry-sdk==1.39.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "uvicorn==0.35.0",
    "pylint-pydantic==0.3.5",
    "pexpect==4.9.0",
    "mcp==1.26.0",
    "werkzeug==3.1.6",
    "azure-core==1.38.0",
    "agent-framework-azure-ai==1.0.0rc4",
    "agent-framework-core==1.0.0rc4",
    "agent-framework-orchestrations==1.0.0b260311",
    "urllib3==2.6.3",
    "protobuf==5.29.6",
    "cryptography==46.0.7",
    "aiohttp==3.13.4",
    "pyasn1==0.6.3",
    "nltk==3.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==5.0.0",
]